# systemf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/install-gtest/: action.yaml
.github/workflows/: build_and_test.yaml
scripts/: .gitignore  parseosrelease.py
src/: CMakeLists.txt  systemf.c
src/systemf/: systemf.h
unittests/: CMakeLists.txt  unittests.cpp
